terraform/ec2.tf
resource "aws_key_pair" "deployer" {
  key_name   = "wanderlust-deployer-key"
 public_key = file(var.public_key_path)
}

resource "aws_default_vpc" "default" {

}

resource "aws_security_group" "wanderlust_web" {
  name = "wanderlust-web-sg"
  description = "Allow user to connect"
  vpc_id      = aws_default_vpc.default.id
  ingress {
    description = "port 22 allow"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = [var.allowed_ssh_cidr]
  }

  egress {
    description = " allow all outgoing traffic "
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    description = "port 80 allow"
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = [var.allowed_ssh_cidr]
  }

  ingress {
    description = "port 443 allow"
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = [var.allowed_ssh_cidr]
  }

  tags = {
    Name = "wanderlust-web-sg"
  }
}

resource "aws_instance" "wanderlust_server" {
  ami             = var.ami_id
  instance_type   = var.instance_type
  key_name        = aws_key_pair.deployer.key_name
  vpc_security_group_ids = [aws_security_group.wanderlust_web.id]  tags = {
    Name = "wanderlust-devops-server"
  }
  root_block_device {
    volume_size = 30 
    volume_type = "gp3"
  }
}
